data/derived/fa15/progs/unify/prog3908.ml.out
Characters 102-107:
  then false
       ^^^^^
Error: This expression has type bool but an expression was expected of type
         int
